--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
 <html>
 	<head>
 		<title>Trying Out HTML</title>
-    
+        <link rel="stylesheet" href="css/style.css"> </href>
 	</head>
 	<body>
-		<h1>Practice</h1>
+        <div class="wrapper">
+            <div class="main">
+                <h1>HTML</h1>
+                <div class="content">
+                    <img class="meow" src="img/meow.jpg">
+                    <p>And then something went BUMP! How that bump made us jump!
+                       We looked then we saw him step in on the mat! We looked! And we saw him!
+                       The cat in the hat!and He said to us,'why do you sit there like that?'
+                       'I know it is wet and the sun is not sunny. But, we can have
+                       lots of good fun that is funny!'
+                      </p>
+                </div>
+            </div>
+            <div class="sidebar">
+                <ul>
+                    <li><a href="http://pbskids.org/catinthehat/">Link 1</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/The_Cat_in_the_Hat">Link 2</a></li>
+                    <li><a href="http://www.imdb.com/title/tt0312528/">Link 3</a></li>
+                    <li><a href="http://www.seussville.com/books/book_detail.php?isbn=9780394800011">Link 4</a></li>
+                </ul>
+            </div>
+        </div>    
 	</body>
 </html>
